send contact emails with mandrill

--- a/source/index.php.erb
+++ b/source/index.php.erb
@@ -97,7 +97,7 @@ layout: layout.haml
 
 	<section class="section" id="contact">
 
-		<form id="theContactForm" action="contactForm.php" method="post">
+		<form id="theContactForm" action="contact.php" method="post">
 
 			<h2 class="header">We'd love to hear from you</h2>
 
