fix url for SDC

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -35,7 +35,7 @@ layout: layout.haml
       %li
         %a{ href: "http://yard-architect.net" } YAR+D Architecture
       %li
-        %a{ href: "http://southerndesignconcern.com" } The Southern Design Concern
+        %a{ href: "http://thesoutherndesignconcern.com" } The Southern Design Concern
 
   %section.section
     %h2.header We designed
