--- a/source/assets/css/css.scss
+++ b/source/assets/css/css.scss
@@ -62,7 +62,6 @@ a {
   }
 }
 
-
 label {
   display: inline-block;
   width: percentage(1/5);
@@ -100,6 +99,7 @@ textarea {
   }
   @include smaller_than( $hobbit ) {
     width: percentage(1);
+    font-size: 16px;
   }
   &[type="submit"] {
     @extend %body;
@@ -149,11 +149,15 @@ textarea {
   margin-left: auto;
   margin-right: auto;
   @include box-sizing;
+  @include smaller_than( $hobbit ) {
+    padding-left: $gutter;
+    padding-right: $gutter;
+  }
 }
 
 .block {
   padding: 2em 0;
-  padding: 6vh 0;
+  padding: 6vmin 0;
 
   .block-title {
     margin-bottom: as_em(12/16);
@@ -210,7 +214,7 @@ textarea {
   background: $blue;
   color: $white;
   padding: 3em 0;
-  padding: 12vh 0;
+  padding: 12vmin 0;
 
   h1 {
     @extend %heading;
@@ -225,7 +229,7 @@ textarea {
 
   .block {
     margin-top: 2em;
-    margin-top: 6vh;
+    margin-top: 6vmin;
     padding-top: 0;
     .block-title {
       position: relative;
@@ -233,7 +237,7 @@ textarea {
     }
     .block-content {
       padding-top: 2em;
-      padding-top: 6vh;
+      padding-top: 6vmin;
     }
   }
 }
